# oSBMPS5

./: .gitignore  README.md
.github/workflows/: android-manual.yml  ios-manual.yml
source/: CMakeLists.txt
source/application/: CMakeLists.txt  StarMainApplication_mobile_sdl.cpp  StarPlatformServices_mobile.cpp  StarRenderer_opengl.cpp  StarRenderer_opengl.hpp
source/application/mobile/: StarMobilePlatform.cpp
source/application/mobile/android/: StarAndroidFileAccessBridge.cpp  StarAndroidFileAccessBridge.hpp
source/application/mobile/android/host/: .gitignore
source/application/mobile/android/host/app/: build.gradle
source/application/mobile/android/host/app/src/main/: AndroidManifest.xml
source/application/mobile/android/host/app/src/main/assets/lang/: en_US.lang  zh_CN.lang
source/application/mobile/android/host/app/src/main/java/io/github/openstarbound/mobile/: MainActivity.java
source/application/mobile/android/host/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
source/application/mobile/android/host/app/src/main/res/values/: styles.xml
source/application/mobile/android/host/app/src/main/res/xml/: file_paths.xml
source/application/mobile/ios/: StarIosFileAccessBridge.cpp  StarIosFileAccessBridge.hpp  StarIosFileAccessBridge.mm  StarIosFileAccessBridgeObjC.mm
source/base/: StarAssets.cpp
source/client/: CMakeLists.txt  StarClientApplication.cpp
source/client/ios/: Info.plist.in
source/client/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
source/core/: StarInputEvent.hpp  StarThread_unix.cpp
source/frontend/: StarErrorScreen.cpp  StarErrorScreen.hpp  StarGraphicsMenu.cpp  StarMainInterface.cpp  StarMainInterface.hpp  StarRadioMessagePopup.cpp  StarTitleScreen.cpp  StarTitleScreen.hpp
source/game/: StarBehaviorDatabase.cpp  StarBehaviorDatabase.hpp  StarBehaviorState.cpp  StarBehaviorState.hpp  StarRoot.cpp
source/platform/: StarExternalFileAccessService.hpp
source/server/: CMakeLists.txt
source/windowing/: StarGuiContext.cpp
triplets/: arm64-ios-mixed.cmake  jemalloc_bad_alloc_compat.hpp  x64-linux-mixed-clang.cmake  x64-linux-mixed.cmake
